What I am happy with
This is what I'm happy with. It's simple, and I feel that it's who I am.
Over time, I will more then likely make changes to it as I learn more
about design and what I think would be a good presentation of what I
know how to do and what I think is suitable, but this is me right now.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
 /* Your Website Styles */
+body {
+	background: silver;
+	font-family: 'Averia Sans Libre', cursive;
+	text-decoration: none;
+}
 
-
-/* Show Grid */
-.showgrid {
-	background: url("../img/grid-bg.png") repeat-y;
+a {
+	text-decoration: none;
+	color: green
 }
